--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,53 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+body {
+  display: flex;
+  min-height: 100vh;
+}
+
+.logo-sidebar {
+  flex: 1 1 33%;
+  background: url(assets/images/halie-west-25xggax4bSA-unsplash.jpg) center/cover;
+  color: var(--logo-color);
+  position: relative;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 1rem;
+  width: 100%;
+
+  position: absolute;
+  top: 20%;
+}
+
+.logo img {
+  width: 96px;
+}
+
 .logo span {
   font-family: "Norse Bold", sans-serif;
+  font-size: 6rem;
 }
+
+.attribution {
+  text-align: center;
+  font-size: 0.875rem;
+  width: 100%;
+  position: absolute;
+  bottom: 1rem;
+}
+
+.attribution > * {
+  color: var(--logo-color);
+}
+
+main {
+  flex: 2 1 66%;
+}
+
