--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: sans-serif;
 }
 
 body {
@@ -52,7 +51,7 @@ body {
 }
 
 .logo span {
-  font-family: "Norse Bold", sans-serif;
+  font-family: "Norse Bold", serif;
   font-size: 6rem;
 }
 
@@ -70,5 +69,11 @@ body {
 
 main {
   flex: 2 1 66%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background: var(--bg-color);
+  padding-left: 4rem;
 }
 
