--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ body {
   align-items: center;
 
   background-color: rgba(0, 0, 0, 0.4);
-  padding: 1rem;
+  padding: .5rem;
   width: 100%;
 
   position: absolute;
@@ -47,12 +47,12 @@ body {
 }
 
 .logo img {
-  width: 96px;
+  width: 72px;
 }
 
 .logo span {
   font-family: "Norse Bold", serif;
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .attribution {
