--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@
   --input-color-default: #E5E7EB;
   --input-color-selected: blue;
   --input-color-invalid: red;
+  --container-width: calc(262px * 2 + 5rem)
 }
 
 * {
@@ -89,5 +90,36 @@ h1 {
   margin-bottom: 4rem;
 }
 
+#fields {
+  background-color: var(--form-color-bg);
+  box-shadow: 0 3px 6px 2px rgba(0, 0, 0, 0.1);
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
+}
 
+h2 {
+  color: var(--form-color-text);
+  margin-bottom: 1.5rem;
+}
+
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  row-gap: 1.5rem;
+  max-width: var(--container-width);
+}
+
+label {
+  color: var(--form-color-text);
+  font-size: 0.75rem;
+  letter-spacing: 1.5px;
+}
+
+input {
+  font-size: 1rem;
+  padding: 0.4rem 0.5rem;
+  border: 1px solid var(--input-color-default);
+  border-radius: 5px;
+}
 
